Removed rounded corners

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <!-- Button trigger modal -->
 
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Subscribe to my news letter 
                 </button>
 
@@ -134,7 +134,7 @@
         <!--cols for cards -->
 
         <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
                 <img src="assets/portfolio-images/wags-and-walks.webp" class="card-img-top" alt="man walking dog">
                  <div class="card-body">
 
@@ -147,7 +147,7 @@
         </div>
 <!--img 2-->
             <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
                 <img src="assets/portfolio-images/we-wellness.webp" class="card-img-top" alt=" candles and towels ">
                  <div class="card-body">
 
@@ -167,7 +167,7 @@
 <!--img 3-->
 
     <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
                 <img src="assets/portfolio-images/math-wiz.webp" class="card-img-top" alt="A kid on his computer ">
                  <div class="card-body">
 
@@ -187,7 +187,7 @@
 <!--img 4-->
 
 <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
                 <img src="assets/portfolio-images/bmi-calculator.webp" class="card-img-top" alt="Weighing scales">
                  <div class="card-body">
 
@@ -228,7 +228,7 @@
         </div>
         <!--form-->
         <div class="col-12 col-md-10 col-lg-8 mb-4">
-            <form class="row g-3">
+            <form class="row g-3 sharp-corners">
                 <div class="col-lg-4">
                      <label for="full-name" class="form-label">First Name</label>
                      <input type="text" class="form-control" id="full-name">
@@ -266,7 +266,7 @@
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+    <div class="modal-content sharp-corners">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -289,7 +289,7 @@
                                 </div>
 
                     <div class="col-12 mb-4">
-                     <button type="submit" class="btn btn-primary">Sign up!</button>
+                     <button type="submit" class="btn btn-primary sharp-corners">Sign up!</button>
                          </div>
                     </form>          
                      </div>
