--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <!-- Button trigger modal -->
 
-                <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-primary sharp-corners custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Subscribe to my news letter 
                 </button>
 
@@ -250,7 +250,7 @@
                      </div>
 
                                 <div class="col-12">
-                                    <button class="btn btn-primary" type="submit">Send</button>
+                                    <button class="btn btn-primary custom-button" type="submit">Send</button>
                                 </div>
                             
                             </div>
@@ -289,7 +289,7 @@
                                 </div>
 
                     <div class="col-12 mb-4">
-                     <button type="submit" class="btn btn-primary sharp-corners">Sign up!</button>
+                     <button type="submit" class="btn btn-primary sharp-corners custom-button">Sign up!</button>
                          </div>
                     </form>          
                      </div>
